fixed footer- still have to align text

--- a/app/client/style.css
+++ b/app/client/style.css
@@ -9,3 +9,6 @@
 .thirdImage {
 
 }
+.in-line {
+ display: inline;
+}
